# flask-blog

./: .gitignore  app.py  myapp.py  pyproject.toml
migrations/versions/: 8788e176a6ba_add_img_name.py
templates/: admin.html  base.html  create.html  update.html
